<resources>
    <string name="island_companion">Island Companion</string>
    <string name="tie">TIE</string>
    <string name="home">Home</string>
    <string name="fish">Fish</string>
    <string name="bugs">Bugs</string>
    <string name="caught">Caught</string>
    <string name="uncaught">Uncaught</string>
    <string name="fish_available_now">Fish Available Now</string>
    <string name="bugs_available_now">Bugs Available Now</string>
    <string name="currently_available">Currently Available</string>
    <string name="available_now">Available to catch right now!</string>
    <string name="going_away_soon">Going Away Soon</string>
    <string name="going_away_soon_description">Get notified when creatures are about to go out of season.</string>
    <string name="going_away_soon_notification_description">A total of %d creatures are going away at the end of the month.</string>
    <string name="unavailable_next_month">The following critters won\'t be available after the end of this month.</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="available_next_month">The following critters will be available from the start of next month.</string>
    <string name="new_this_month">New This Month</string>
    <string name="new_this_month_description">Get notified at the start of the month with the new creatures you can find and catch.</string>
    <string name="new_this_month_subtitle">The following critters weren\'t available last month, but are available this month.</string>

    <string name="monthRange">%s - %s</string>

    <string name="all_year">All year</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <plurals name="more_uncaught">
        <item quantity="one">And %d more critter that you have already caught!</item>
        <item quantity="other">And %d more critters that you have already caught!</item>
    </plurals>

    <plurals name="going_away_soon_notification">
        <item quantity="one">%d uncaught creature is going away soon!</item>
        <item quantity="other">%d uncaught creatures are going away soon!</item>
    </plurals>

    <plurals name="new_this_month_notification">
        <item quantity="one">%d creatures have started spawning this month! There is %d you haven\'t caught yet.</item>
        <item quantity="other">%d creatures have started spawning this month! There are %d you haven\'t caught yet.</item>
    </plurals>
</resources>
