<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home">

    <action
        android:id="@+id/to_bug_profile"
        app:destination="@id/bug_profile" />

    <action
        android:id="@+id/to_going_soon"
        app:destination="@id/going_soon" />

    <action
        android:id="@+id/to_coming_soon"
        app:destination="@id/coming_soon" />

    <fragment android:id="@+id/home"
        android:label="@string/island_companion"
        android:name="com.jamieadkins.acnh.home.HomeFragment" />

    <fragment android:id="@+id/fish"
        android:label="@string/fish"
        android:name="com.jamieadkins.acnh.fish.FishFragment" />

    <fragment android:id="@+id/bugs"
        android:label="@string/bugs"
        android:name="com.jamieadkins.acnh.bugs.BugsFragment" />

    <fragment android:id="@+id/bug_profile"
        android:label="@string/bugs"
        android:name="com.jamieadkins.acnh.bugs.profile.BugProfileFragment">

        <argument
            android:name="id"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/going_soon"
        android:name="com.jamieadkins.acnh.home.going.GoingSoonFragment"
        android:label="@string/going_away_soon">
        <deepLink
            android:id="@+id/deepLink"
            app:uri="acnh://goingsoon" />
    </fragment>

    <fragment
        android:id="@+id/coming_soon"
        android:name="com.jamieadkins.acnh.home.coming.ComingSoonFragment"
        android:label="@string/coming_soon">
        <deepLink
            android:id="@+id/deepLink"
            app:uri="acnh://comingsoon" />
    </fragment>

</navigation>