<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_width="match_parent"
    tools:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/currentlyAvailableText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline6"
            android:text="@string/currently_available"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10:36 PM"
            android:textAppearance="?textAppearanceBody1"
            android:layout_marginEnd="12dp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/currentlyAvailableText"
            app:layout_constraintTop_toTopOf="@id/currentlyAvailableText" />

        <TextView
            android:id="@+id/fishCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline4"
            tools:text="15"
            android:includeFontPadding="false"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/currentlyAvailableText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bugsCount"/>

        <TextView
            android:id="@+id/bugsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?textAppearanceHeadline4"
            tools:text="15"
            android:includeFontPadding="false"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/currentlyAvailableText"
            app:layout_constraintStart_toEndOf="@id/fishCount"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fish"
            android:textAppearance="?textAppearanceBody2"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/fishCount"
            app:layout_constraintStart_toStartOf="@id/fishCount"
            app:layout_constraintEnd_toEndOf="@id/fishCount"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bugs"
            android:textAppearance="?textAppearanceBody2"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/bugsCount"
            app:layout_constraintStart_toStartOf="@id/bugsCount"
            app:layout_constraintEnd_toEndOf="@id/bugsCount"
            app:layout_constraintBottom_toBottomOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>